Fix copy button spacing
From the document Espresso Block Explorer Design QA provided by Martin
Ahe

In the document martin asserts that the design for the copy symbols indicates
that they should always have a 4px gap.

These changes adjust this gap so that the button can be positioned more
correctly when inline with other text.

--- a/packages/espresso-block-explorer-components/src/components/hid/buttons/copy_button/copy_button.css
+++ b/packages/espresso-block-explorer-components/src/components/hid/buttons/copy_button/copy_button.css
@@ -2,8 +2,8 @@
 button.btn--copy {
   appearance: none;
   box-sizing: border-box;
-  margin: 0 1em;
-  padding: 2px;
+  margin: 0 4px;
+  padding: 0;
   background-color: var(--color--transparent);
   border: none;
   cursor: pointer;
